--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,12 @@
+@font-face {
+  font-family: 'SpongeBob';
+  src: url('fonts/SpongeBob.ttf')  format('truetype');
+}
+* {margin:0; padding:0; box-sizing: border-box;}
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: 'SpongeBob',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  letter-spacing: 1px;
 }
