--- a/src/pages/Enemies/style.css
+++ b/src/pages/Enemies/style.css
@@ -1,5 +1,5 @@
 h1 {
-    margin:2em 0;
+    margin-bottom:2em;
     text-align:center;
 }
 .table {
@@ -7,8 +7,8 @@ h1 {
     margin:auto;
 }
 .tableBtn {
-    background:#ccc;
-    color:inherit;
+    background: #a4a4a4;
+    color:#484849;
     cursor:pointer;
     font:inherit;
     float:left;
@@ -19,8 +19,9 @@ h1 {
     width:33.33%;
 }
 .enemy {
-    background:#ccc;
+    background:#a4a4a4;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    color:#484849;
     clear:both;
     margin:1em auto;
     padding:1em 2em;
@@ -36,6 +37,9 @@ h1 {
     left:15em;
     transform:translateY(-50%);
 }
+.enemy h2 {
+    font-size:2em;
+}
 .enemy p {
     margin-top:1em;
 }
@@ -44,7 +48,7 @@ h1 {
     text-align:right;
 }
 .Thwarted {
-    color:red;
+    color:maroon;
 }
 .TBD {
     color:yellow;
