--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -10,14 +10,11 @@ footer svg {
 @keyframes gary {
     0% {}
     10% { bottom:-10em; }
-    14% { transform:scaleX(-1);}
-    15% { transform:scaleX(1) }
-    16% { transform: scaleX(-1); }
-    17% { transform: scaleX(1); }
-    18% { transform: scaleX(-1); }
-    20% { bottom:-10em; }
-    30% { bottom:-25em; right:0;}
-    40% { right:-20em; bottom:-25em;}
+    30% { bottom:-25em; right:0; transform:scaleX(-1)}
+    40% { right:80%; transform:scaleX(1); bottom:-25em; }
+    45% { bottom:-10em; transform:rotate(-15deg) }
+    50% { right:80%; bottom:-25em; transform: scaleX(1);}
+    60% { right:-20em; bottom:-25em; transform:scaleX(-1)}
     70% { right:-20em; bottom:-1.25em; }
     80% { right:120%; bottom:-1.25em; }
     90% { right: 120%; bottom:-25em; }
